Fix broken style of active participants filter

--- a/templates/default/app.less
+++ b/templates/default/app.less
@@ -997,9 +997,6 @@ span[id$="_backgroundColorTransparency"][disabled = "disabled"] {opacity: 0.5}
 		right: 45px !important;
 	}
 }
-.smallpart_filter_participants.is_staff {
-	width: 70% !important;
-}
 .smallpart_filter_participants {
 	float: right;
 	div.ms-sel-ctn .ms-close-btn {
